[package]
name = "rusteroids"
version = "0.0.1"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking", "debug_asset_server", "bevy_dynamic_plugin", "multi-threaded"]}
bevy_rapier2d = { version = "0.22.0", features = [ "debug-render-2d", "parallel" ] }

bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"


 
bevy_hanabi = "0.7"


rand = "0.8.5"
rand_chacha = "0.3.1"

bevy_renet = { version = "0.0.9" }
renet_visualizer = { version = "0.0.6", features = ["bevy"] }

permutation = "0.4.1"
json = "0.12.4"

serde = "1.0.188"
bincode = "1.3.3"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/t.rs"

[[bin]]
name = "test1"
path = "src/t2.rs"

[[bin]]
name = "solo"
path = "src/0solo_client.rs"

[[bin]]
name = "asteroid"
path = "src/generator_test.rs"
