[package]
name = "rusteroids"
version = "0.0.1"
edition = "2021"

[package.metadata.android.signing.release]
path = "~/.android/debug.keystore"
keystore_password = "android"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# engine
bevy = { version = "0.12.1", features = ["dynamic_linking", "bevy_dynamic_plugin", "multi-threaded", "serialize"]}
# physics engine
bevy_rapier2d = { version = "0.23.0", features = [ "debug-render-2d", "parallel", "enhanced-determinism" ] }
# ui
bevy_egui = "0.23.0"
bevy-inspector-egui = "0.21.0"
# GPU particles
bevy_hanabi = "0.8"
# random
rand = "0.8.5"
rand_chacha = "0.3.1"
# networking
bevy_renet = { version = "0.0.10" }
renet_visualizer = { version = "0.0.7", features = ["bevy"] }
# other stuff
permutation = "0.4.1"
json = "0.12.4"
serde = "1.0.193"
bincode = "1.3.3"
weighted_rand = "0.4.2"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "solo"
path = "src/0solo_client.rs"

[[bin]]
name = "asteroid"
path = "src/generator_test.rs"

[[bin]]
name = "bincode_test"
path = "src/bincode_test.rs"

[[bin]]
name = "client_test"
path = "src/client_test.rs"
